[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/DiceUI.gd" type="Script" id=1]
[ext_resource path="res://scenes/Cube.tscn" type="PackedScene" id=2]

[node name="DiceUI" type="Node2D"]
script = ExtResource( 1 )
die_scene = ExtResource( 2 )

[node name="RollWaitTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="timeout" from="RollWaitTimer" to="." method="dice_rolled"]
